[package]
name = "slab-server"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license = "AGPL-3.0-only"

[[bin]]
name = "slab-server"
path = "src/main.rs"

[dependencies]
# Core AI runtime
slab-core     = { workspace = true }
slab-proto    = { workspace = true }
slab-libfetch = { workspace = true }
hf-hub        = { workspace = true }

# Async runtime
tokio   = { workspace = true }
futures = { workspace = true }
bytes   = { workspace = true }

# Web framework + middleware
axum       = { version = "0.8", features = ["macros", "multipart"] }
tower      = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "set-header","util"] }
http = "1.4.0"
http-body-util = "0.1.3"
tonic = { version = "0.12", features = ["transport"] }
parity-tokio-ipc = "0.9"
hyper-util = { version = "0.1", features = ["tokio"] }

# Serialization
serde      = { workspace = true }
serde_json = { workspace = true }
genai      = { workspace = true }

# Database (SQLite; swappable via trait)
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "migrate", "chrono", "uuid", "_sqlite"] }

# IDs & time
uuid   = { workspace = true }
chrono = { workspace = true }

# OpenAPI / Swagger
utoipa            = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-axum       = { version = "0.2" }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = { workspace = true }
anyhow    = { workspace = true }
validator = { version = "0.19", features = ["derive"] }

# Misc
base64    = { workspace = true }
bytemuck  = "1"
strum = { version = "0.28.0", features = ["derive"] }
clap = { version = "4.5.60", features = ["derive"] }
all-smi = "0.17"
image     = { workspace = true }
dirs-next = "2.0.0"
jsonschema = { version = "0.45.0", default-features = false }
windows-sys = { version = "0.59.0", features = ["Win32_Storage_FileSystem"] }
ffmpeg-sidecar = { workspace = true, features = ["download_ffmpeg"] }
