[package]
name = "slab-subtitle"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
combine = { workspace = true }
thiserror = { workspace = true }
itertools = "0.14.0"
encoding_rs = "0.8.35"
chardet = "0.2.4"
