[package]
name = "slab-whisper-sys"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

include = [
    "wrapper.h",
]

[build-dependencies]
slab-libfetch = { workspace = true }
bindgen = { workspace = true }
tokio = { workspace = true }

[dependencies]
libloading = { workspace = true }
