load("//tools/bazel:rust.bzl", "slab_rust_library")

package(default_visibility = ["//visibility:public"])

slab_rust_library(
    name = "slab-agent-tools",
    deps = [
        "//crates/slab-agent:slab-agent",
        "//crates/slab-config:slab-config",
        "//crates/slab-file:slab-file",
        "//crates/slab-git:slab-git",
        "//crates/slab-mcp:slab-mcp",
        "//crates/slab-sandboxing:slab-sandboxing",
        "//crates/slab-shell-command:slab-shell-command",
        "//crates/slab-types:slab-types",
    ],
)
