[package]
name = "slab-agent-tracing"
version.workspace = true
edition.workspace = true
description = "Session-scoped agent trace logging for slab.rs"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
chrono     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
slab-otel  = { workspace = true }
tracing    = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
