[package]
name = "slab-app-core"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[features]
default = []
axum = ["dep:axum"]
gpu-telemetry = ["dep:all-smi"]

[build-dependencies]
serde_json = { workspace = true }
slab-build-utils = { workspace = true }
slab-utils = { workspace = true }

[dependencies]
# Internal workspace deps
slab-runtime-core = { workspace = true }
slab-agent        = { workspace = true }
slab-agent-tools  = { workspace = true }
slab-proto        = { workspace = true }
slab-model-pack   = { workspace = true }
slab-types        = { workspace = true }
slab-config       = { workspace = true }
slab-libfetch     = { workspace = true }
slab-hub          = { workspace = true }
slab-utils        = { workspace = true }
slab-subtitle     = { workspace = true }
slab-git          = { workspace = true }
slab-file         = { workspace = true }
slab-sandboxing   = { workspace = true }
slab-plugin       = { workspace = true }

# Async runtime
tokio   = { workspace = true }
futures = { workspace = true }
bytes   = { workspace = true }

# gRPC / IPC
tonic            = { workspace = true }
parity-tokio-ipc = { workspace = true }
winapi           = { workspace = true }
tower            = { workspace = true }
hyper-util       = { workspace = true }

# OpenAPI schema derives (no HTTP/axum dependency)
utoipa = { workspace = true, features = ["uuid", "chrono"] }

# Serialization
serde      = { workspace = true }
serde_json = { workspace = true }
minijinja  = { workspace = true }
genai      = { workspace = true }
reqwest    = { workspace = true }

# Database (SQLite)
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio-rustls", "migrate", "chrono", "uuid"] }

# IDs & time
uuid   = { workspace = true }
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow    = { workspace = true }

# Misc
async-trait = { workspace = true }
base64      = { workspace = true }
hex         = { workspace = true }
bytemuck    = { workspace = true }
strum       = { workspace = true }
regex       = { workspace = true }
image       = { workspace = true }
sha2        = { workspace = true }
zip         = { workspace = true }
dirs-next   = { workspace = true }
jsonschema  = { workspace = true }
ffmpeg-sidecar = { workspace = true, features = ["download_ffmpeg"] }
all-smi = { workspace = true, optional = true }
sysinfo = { workspace = true }
windows-sys = { workspace = true, features = ["Win32_Storage_FileSystem"] }
validator = { workspace = true, features = ["derive"] }
dashmap = { workspace = true }
tokio-stream = { workspace = true }

# Optional: Axum state extractor integration
axum = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
