[package]
name = "slab-app-core"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[features]
default = ["gpu-telemetry", "ffmpeg-next-static"]
axum = ["dep:axum"]
gpu-telemetry = ["dep:all-smi"]
ffmpeg-next-runtime = ["dep:ffmpeg-next"]
ffmpeg-next-static = ["ffmpeg-next-runtime", "ffmpeg-next/static"]
ffmpeg-next-build = ["ffmpeg-next-static", "ffmpeg-next/build"]

[build-dependencies]
serde_json = { workspace = true }
slab-build-utils = { workspace = true }
slab-utils = { workspace = true }

[dependencies]
# Internal workspace deps
slab-runtime-core = { workspace = true }
slab-agent        = { workspace = true }
slab-agent-tracing = { workspace = true }
slab-agent-tools  = { workspace = true }
slab-mcp          = { workspace = true }
slab-proto        = { workspace = true }
slab-model-pack   = { workspace = true }
slab-types        = { workspace = true }
slab-config       = { workspace = true }
slab-libfetch     = { workspace = true }
slab-hub          = { workspace = true }
slab-jsonrpc      = { workspace = true }
slab-utils        = { workspace = true }
slab-subtitle     = { workspace = true }
slab-git          = { workspace = true }
slab-file         = { workspace = true }
slab-sandboxing   = { workspace = true }
slab-plugin       = { workspace = true }

# Async runtime
tokio   = { workspace = true }
futures = { workspace = true }
bytes   = { workspace = true }

# gRPC / IPC
tonic            = { workspace = true }
parity-tokio-ipc = { workspace = true }
winapi           = { workspace = true }
tower            = { workspace = true }
hyper-util       = { workspace = true }

# OpenAPI schema derives (no HTTP/axum dependency)
utoipa = { workspace = true, features = ["uuid", "chrono"] }

# Serialization
serde      = { workspace = true }
serde_json = { workspace = true }
minijinja  = { workspace = true }
genai      = { workspace = true }
reqwest    = { workspace = true }

# Database (SQLite)
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio", "migrate", "chrono", "uuid"] }

# IDs & time
uuid   = { workspace = true }
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow    = { workspace = true }

# Misc
async-trait = { workspace = true }
base64      = { workspace = true }
bytemuck    = { workspace = true }
strum       = { workspace = true }
regex       = { workspace = true }
image       = { workspace = true }
zip         = { workspace = true }
jsonschema  = { workspace = true }
ffmpeg-next = { workspace = true, optional = true }
all-smi = { workspace = true, optional = true }
sysinfo = { workspace = true }
validator = { workspace = true, features = ["derive"] }
dashmap = { workspace = true }
tokio-stream = { workspace = true }

# Optional: Axum state extractor integration
axum = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
