load("//tools/bazel:rust.bzl", "slab_rust_binary", "slab_rust_library")

package(default_visibility = ["//visibility:public"])

slab_rust_library(
    name = "slab-apply-patch",
    deps = [
        "//crates/slab-file:slab-file",
        "//crates/slab-utils:slab-utils",
    ],
)

slab_rust_binary(
    name = "apply_patch",
    crate_name = "apply_patch",
    srcs = glob(["src/**/*.rs"], exclude = ["src/lib.rs"]),
    deps = [
        ":slab-apply-patch",
        "//crates/slab-file:slab-file",
        "//crates/slab-utils:slab-utils",
    ],
)
