load("//tools/bazel:rust.bzl", "slab_cargo_build_script", "slab_rust_library")

package(default_visibility = ["//visibility:public"])

slab_cargo_build_script(
    deps = ["//crates/slab-model-pack:slab-model-pack"],
)

slab_rust_library(
    name = "slab-build-utils",
    deps = [
        "//crates/slab-libfetch:slab-libfetch",
        "//crates/slab-model-pack:slab-model-pack",
    ],
    build_script = ":build_script",
)
