[package]
name = "slab-build-utils"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license = "AGPL-3.0-only"

[dependencies]
anyhow = { workspace = true }
cargo_metadata = { workspace = true }
slab-libfetch = { workspace = true }
tokio = { workspace = true }
