[package]
name = "slab-build-utils"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
cargo_metadata = { workspace = true }
slab-libfetch = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
slab-model-pack = { workspace = true }